--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "dashboard",
+    "name": "dashboard01",
     "version": "1.0.0",
     "description": "Test Landing Page",
     "main": "src/index.js",
